# CMake-Example

./: .gitignore  CMakeLists.txt  CPackCon.cmake  License.txt  README.md
DemoApp/: CMakeLists.txt  main.cpp  version.h.in
DynamicLib/: CMakeLists.txt  d-hello.cpp  d-hello.h  dlib_export.h
StaticLib/: CMakeLists.txt  s-hello.cpp  s-hello.h
